CREATE TABLE Finalizacao (
    ID INT PRIMARY KEY,
    DataFinalizacao DATE,
    Comentario TEXT
);