CREATE TABLE OrdemServicoEquipamento (
    OrdemServicoID INT,
    EquipamentoID INT,
    PRIMARY KEY (OrdemServicoID, EquipamentoID)
);