CREATE TABLE OrdemServicoOcorrencia (
    OrdemServicoID INT,
    OcorrenciaID INT,
    PRIMARY KEY (OrdemServicoID, OcorrenciaID)
);