CREATE TABLE OrdemServicoPeca (
    OrdemServicoID INT,
    PecaID INT,
    PRIMARY KEY (OrdemServicoID, PecaID)
);