CREATE TABLE OrdemServicoServico (
    OrdemServicoID INT,
    ServicoID INT,
    PRIMARY KEY (OrdemServicoID, ServicoID)
);