CREATE TABLE Peca (
    ID INT PRIMARY KEY,
    Tipo VARCHAR(255),
    Descricao TEXT,
    Valor DECIMAL(10, 2)
);