@startuml Gestao de Ordem de Servico
entity OrdemServico {
+ ID <<PK>>
  + Data de Abertura
  + Prazo
  + Forma de Pagamento
  + Status
+ Cliente <<FK>>
+ Tecnico <<FK>>
+ Finalizacao <<FK>>
}

entity Cliente {
+ ID <<PK>>
  + CPF
  + CNPJ
  + Nome
  + Telefone
  + Email
  + Endereco
}

entity Tecnico {
+ ID <<PK>>
  + Nome
  + Especialidade
  + Telefone
  + Email
}


entity Equipamento {
+ ID <<PK>>
  + Tipo
  + Marca
  + Modelo
  + Dados Adicionais
  + Defeito Declarado
  + Solucao
}

entity Servico {
+ ID <<PK>>
  + Data
  + Descricao
  + Valor
}

entity Ocorrencia {
+ ID <<PK>>
  + Descricao
  + Situacao
  + Data e Hora
}


entity Peca {
+ ID <<PK>>
  + Tipo
  + Descricao
  + Valor
}

entity Finalizacao {
+ ID <<PK>>
  + Data de Finalizacao
  + Comentario
}

entity OrdemServicoEquipamento{
 + OrdemServicoID <<PK, FK>>
 + EquipamentoID <<PK, FK>>
}

entity OrdemServicoServico {
 + OrdemServicoID <<PK, FK>>
 + ServicoID <<PK, FK>>
}

entity OrdemServicoOcorrencia{
  + OrdemServicoID <<PK, FK>>
  + OcorrenciaID <<PK, FK>>
}

entity OrdemServicoPeca {
  + OrdemServicoID  <<PK, FK>>
  + PecaID <<PK, FK>>
}


OrdemServico "0..*" -- "1" Cliente
OrdemServico "0..*" --"1" Tecnico
OrdemServico "1" -- "0..*" OrdemServicoEquipamento
OrdemServicoEquipamento"1..*" -- "1" Equipamento
OrdemServico "1" -- "0..*" OrdemServicoServico
OrdemServicoServico"1..*" -- "1" Servico
OrdemServico "1" -- "0..*" OrdemServicoOcorrencia
OrdemServico "1" -- "0..*" OrdemServicoPeca
OrdemServicoOcorrencia"1..*" -- "1" Ocorrencia
OrdemServicoPeca "1..*" -- "1" Peca
OrdemServico "1" --"0..1" Finalizacao
@enduml